--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "scripts": {
     "build": "next build",
     "dev": "next dev --turbo",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
     "@heroicons/react": "^2.1.5",
@@ -19,7 +20,6 @@
     "react": "19.0.0-rc-cd22717c-20241013",
     "react-dom": "19.0.0-rc-cd22717c-20241013",
     "tailwindcss": "3.4.15",
-    "typescript": "5.6.3",
     "use-debounce": "^10.0.4",
     "zod": "^3.23.8"
   },
@@ -27,7 +27,13 @@
     "@types/bcrypt": "^5.0.2",
     "@types/node": "22.9.0",
     "@types/react": "npm:types-react@19.0.0-alpha.3",
-    "@types/react-dom": "npm:types-react-dom@19.0.0-alpha.3"
+    "@types/react-dom": "npm:types-react-dom@19.0.0-alpha.3",
+    "@typescript-eslint/eslint-plugin": "^8.14.0",
+    "@typescript-eslint/parser": "^8.14.0",
+    "eslint": "^9.15.0",
+    "eslint-config-next": "15.0.3",
+    "eslint-config-prettier": "^9.1.0",
+    "typescript": "5.6.3"
   },
   "pnpm": {
     "overrides": {
